# babl

./: .gitignore  README.md  check_cli_tools.sh  docker-compose.yaml  env  pull_data.sh  requirements.txt  test.argparse.dataclasses.py
T5/: .gitignore  eval.py  read.py  requirements.txt  train.py
app/fit/: README.md
app/fit/notebooks/: fit.ipynb  models.ipynb
app/fit/web/babl/core/: settings.py
app/models/: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
app/models/src/babl/: config.py  data.py  metrics.py  routine.py  utils.py
app/models/src/babl/model/T5/: model.py  train.py  utils.py
app/notebooks/: t5.ipynb
app/serve/: Dockerfile.serve  requirements.dev.txt  requirements.txt
app/serve/api/: main.py  schema.py
app/web/: Dockerfile.web
fit/: README.md  env  fit.py  hugginface.fit.py
infra/: .gitignore  README.md  aws_env_vars  main.tf  variables.tf
infra/alb/: main.tf  variables.tf
infra/ec2/: main.tf  variables.tf
infra/sg/: main.tf  variables.tf
infra/utils/: create-s3-tf-backend-bucket.sh  delete-s3-tf-backend-bucket.sh
infra/vpc/: main.tf  variables.tf
models/: README.md  setup.cfg
models/T5/: config.py  dockerfile.trainingGPU  eval.py  train.py
models/src/babl/: config.py  data.py  metrics.py  models.py  routine.py  utils.py
models/src/babl/architecture/T5/: config.py  data.py  (+3 more)
models/src/babl/model/: metrics.py  utils.py
notebooks/: fit.ipynb  model.ipynb
serve/: README.md  requirements.dev.txt  requirements.txt  run_server.sh
serve/api/: main.py  predictor.py  schema.py
web/: README.md  dev.README.md
(+7 files in other folders)
