[metadata]
name = babl
description = Fine tuning large language models  
author = Akin Wilson
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    babl
install_requires =
    tqdm>=4.67.1
    torch>=2.5.1
    dataset>=1.6.2
    transformers>=4.48.0
    nlp>=0.4.0
    sentencepiece>=0.2.0
    accelerate>=1.3.0
    gdown>=5.2.0
    protobuf>=5.29.3
    pytorch-lightning>=2.5.0.post0
    tensorboard>=2.18.0
    onnx>=1.17.0
    onnxruntime>=1.20.1
    onnxruntime-gpu>=1.20.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no


[flake8]
max-line-length = 240
